tests/incremental_no_implicitly_include_root/included.js
const a: string = 3; // error
